Fixed BookService and added BookServiceTest.java